--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -12,7 +12,7 @@ html {
 body {
   background-color: white;
   color: #000;
-  font-family: var(--sofia);
+  font-family: var(--body-text);
   font-size: 1rem;
   width: 100%;
   margin: 0;
@@ -59,14 +59,14 @@ a {
 
 .main-heading {
   width: 100%;
-  font-family: var(--proxima);
+  font-family: var(--main-heading);
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 600;
   text-align: center;
   background-color: var(--dark-purple);
   color: #fff;
   margin: 0;
-  padding: 12px 5%;
+  padding: 0.75rem;
   border-radius: 25px 25px 0 0;
 }
 
@@ -98,7 +98,7 @@ a {
 
 .button {
   cursor: pointer;
-  font-family: var(--sofia);
+  font-family: var(--button-text);
   font-size: 1.125rem;
   display: inline-block;
   align-self: center;
@@ -107,7 +107,7 @@ a {
   border-radius: 5px;
   background-color: var(--magenta);
   color: var(--white);
-  padding: 0.5rem 2rem;
+  padding: 0.75rem 2rem;
   margin: 0;
   transition-property: scale;
   transition-duration: 0.5s;
