--- a/styles/index.css
+++ b/styles/index.css
@@ -119,6 +119,7 @@ figure {
 
 
 .hero-container {
+  position: relative;
   width: 100%;
   height: 1000px;
   color: var(--white);
@@ -129,24 +130,20 @@ figure {
   margin-bottom: 0;
 }
 
-.categories-container {
-  width: 100%;
-  background-color: #252525;
-  color: var(--white);
-  margin-bottom: 0;
-}
-
 .hero-content {
-  position: relative;
-  top: 3rem;
-  left: 10%;
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 3rem;
   font-family: var(--sofia);
-  display: inline-block;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  gap: 2rem;
   /* background-color: pink; */
-  /* text-align: center; */
+}
+
+.hero-button {
+  align-self: start;
+  padding: 1rem 2rem;
 }
 
 h1 {
@@ -164,6 +161,13 @@ h2 {
   margin-top: 0;
 }
 
+.categories-container {
+  width: 100%;
+  background-color: #252525;
+  color: var(--white);
+  margin-bottom: 0;
+}
+
 .clock {
   font-size: 1.125rem;
   display: flex;
@@ -175,11 +179,6 @@ h2 {
 .fa-clock {
   color: var(--white);
   font-size: 1.5rem;
-}
-
-.hero-button {
-  align-self: start;
-  margin-top: 2rem;
 }
 
 .hero-button::after {
@@ -210,27 +209,17 @@ h2 {
   margin: 0 auto;
 }
 
-.arrow-up {
-  width: 0;
-  height: 0;
-  border-left: 40px solid transparent;
-  border-right: 40px solid transparent;
-  border-bottom: 40px solid #fff;
-  position: absolute;
-  bottom: 170px;
-  left: 170px;
-}
-
 .speech-bubble {
-  position: relative;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  padding: 1.5rem;
+  transform: translateX(-50%);
   z-index: 1;
   font-family: var(--proxima-soft);
   font-size: 1.125rem;
   background-color: var(--white);
   color: var(--dark-purple);
-  width: 300px;
-  min-height: 170px;
-  margin: 120px auto 0 auto;
   border-radius: 10px;
   transition-property: scale;
   transition-duration: 0.5s;
@@ -242,11 +231,33 @@ h2 {
   scale: 1.1;
 }
 
+.speech-bubble-caption {
+  margin: 0;
+  padding: 0;
+}
+
+.speech-bubble-caption::before {
+  content: "“";
+  font-size: 2rem;
+  padding-right: 2px;
+}
+
 .speech-bubble a {
   color: var(--dark-blue);
 }
 
-h3 {
+.speech-bubble-arrow {
+  position: absolute;
+  top: -30px;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-left: 40px solid transparent;
+  border-right: 40px solid transparent;
+  border-bottom: 40px solid #fff;
+}
+
+/* h3 {
   max-width: 200px;
   padding-top: 24px;
   padding-bottom: 0;
@@ -254,22 +265,22 @@ h3 {
   z-index: 10;
   font-size: 1.25rem;
   text-transform: uppercase;
-}
+} */
 
-h3::before {
+/* h3::before {
   content: "“";
   font-size: 2rem;
   padding-right: 2px;
-}
+} */
 
-.speech-bubble p {
+/* .speech-bubble p {
   margin: 0;
   font-family: var(--neue-haas);
   font-size: 1rem;
   width: 200px;
   text-align: right;
   margin-right: 16px;
-}
+} */
 
 .speech-bubble span {
   color: var(--dark-purple);
@@ -571,10 +582,10 @@ h6 {
     font-size: 1.75rem;
   }
 
-  .speech-bubble {
+  /* .speech-bubble {
     bottom: 30px;
     right: 20px;
-  }
+  } */
 
   h5 {
     font-size: 1.25rem;
@@ -615,35 +626,34 @@ h6 {
     background-image: url(../images/robot-main_medium.jpg);
   }
 
-  .arrow-up {
-    border-bottom: 40px solid transparent;
-    border-left: 40px solid #fff;
+  .speech-bubble-arrow {
+    border-left: 40px solid transparent;
     border-right: 40px solid transparent;
     border-top: 40px solid #fff;
-    top: 140px;
-    left: 0px;
+    bottom: 0;
+    left: 0;
   }
 
-  h3 {
+  /* h3 {
     margin: 16px auto;
     padding-top: 32px;
     max-width: 250px;
-  }
+  } */
 
-  .speech-bubble {
+  /* .speech-bubble {
     border-radius: 10px 10px 10px 0;
     margin-top: 70px;
     bottom: 0;
     scale: 0.8;
-  }
+  } */
 
-  .speech-bubble:hover {
+  /* .speech-bubble:hover {
     scale: 0.9;
-  }
+  } */
 
-  #about {
+  /* #about {
     padding-bottom: 32px;
-  }
+  } */
 
   h5 {
     font-size: 1.5rem;
@@ -701,9 +711,13 @@ h6 {
 
   /* Main
 --------------------*/
-  /* main {
-    background-color: #dbdbdb;
-  } */
+    .hero-content {
+      width: 50%;
+      margin-left: 10%;
+      padding-top: 4rem;
+      font-family: var(--sofia);
+    }
+
   /* carousel */
   h5 {
     padding-top: 1rem;
@@ -757,10 +771,10 @@ h6 {
     font-size: 2rem;
   }
 
-  .speech-bubble {
+  /* .speech-bubble {
     margin-top: 100px;
     left: 20px;
-  }
+  } */
 
   .clock {
     font-size: 1.25rem;
@@ -874,14 +888,14 @@ h6 {
     font-weight: 500;
   }
 
-  .speech-bubble {
+  /* .speech-bubble {
     margin-top: 150px;
     scale: 1;
-  }
+  } */
 
-  .speech-bubble:hover {
+  /* .speech-bubble:hover {
     scale: 1.1;
-  }
+  } */
 
   .clock {
     font-size: 1.5rem;
