--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,6 @@
 :root {
   --magenta: #a20067;
+  --button-color: #a20067;
   --dark-purple: #210759;
   --purple: #470c68;
   --light-purple: #7c68a6;
