--- a/styles/index.css
+++ b/styles/index.css
@@ -211,24 +211,27 @@ h2 {
 
 .speech-bubble {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  width: 300px;
+  margin: 0 auto;
+  right: 10%;
+  top: 60%;
+  /* transform: translate(-50%, -50%); */
   padding: 1.5rem;
-  transform: translateX(-50%);
   z-index: 1;
-  font-family: var(--proxima-soft);
+  /* font-family: var(--proxima-soft); */
   font-size: 1.125rem;
   background-color: var(--white);
   color: var(--dark-purple);
-  border-radius: 10px;
-  transition-property: scale;
+  border-radius: 25px;
+  transition-property: all;
   transition-duration: 0.5s;
   box-shadow: 0 6px 12px #00000040;
   scale: 1;
 }
 
 .speech-bubble:hover {
-  scale: 1.1;
+  transform-origin: center;
+  transform: scale(1.1);
 }
 
 .speech-bubble-caption {
@@ -242,14 +245,14 @@ h2 {
   padding-right: 2px;
 }
 
-.speech-bubble a {
+/* .speech-bubble a {
   color: var(--dark-blue);
-}
+} */
 
 .speech-bubble-arrow {
   position: absolute;
-  top: -30px;
-  right: 0;
+  top: -35px;
+  right: 10%;
   width: 0;
   height: 0;
   border-left: 40px solid transparent;
@@ -286,11 +289,11 @@ h2 {
   color: var(--dark-purple);
 }
 
-.speech-bubble div {
+/* .speech-bubble div {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 .categories-section {
   width: 95%;
@@ -475,7 +478,7 @@ div.selected {
   background-color: var(--dark-blue);
 }
 
-section.clubs {
+.clubs-section {
   width: 100%;
   margin: 0 auto;
   background-color: white;
@@ -499,9 +502,11 @@ figure.clubs {
   transition-duration: 0.5s;
   opacity: 1;
 }
+
 figure.clubs:last-child {
   margin-top: 25px;
 }
+
 figure.clubs img {
   width: 100%;
   border-top: 2px solid var(--dark-purple);
@@ -513,9 +518,11 @@ figure.clubs img {
   transition: all;
   transition-duration: 0.5s;
 }
+
 figure.clubs img:hover {
   opacity: 0.7;
 }
+
 figcaption.clubs {
   font-family: var(--proxima);
   font-size: 1.25rem;
@@ -525,6 +532,7 @@ figcaption.clubs {
   margin-bottom: 24px;
   margin-top: 16px;
 }
+
 h6 {
   font-size: 1rem;
 }
@@ -627,11 +635,11 @@ h6 {
   }
 
   .speech-bubble-arrow {
-    border-left: 40px solid transparent;
+    /* border-left: 40px solid transparent;
     border-right: 40px solid transparent;
     border-top: 40px solid #fff;
-    bottom: 0;
-    left: 0;
+    bottom: 0; */
+    left: 10%;
   }
 
   /* h3 {
@@ -841,7 +849,7 @@ h6 {
     display: block;
   }
 
-  section.clubs {
+  .clubs-section {
     width: 100%;
     padding-top: 50px;
   }
@@ -875,9 +883,9 @@ h6 {
     left: 863px;
   }
 
-  section.newsletter {
+  /* section.newsletter {
     width: 40%;
-  }
+  } */
 
   h1 {
     font-size: 4.25rem;
@@ -888,10 +896,9 @@ h6 {
     font-weight: 500;
   }
 
-  /* .speech-bubble {
-    margin-top: 150px;
-    scale: 1;
-  } */
+  .speech-bubble {
+    right: 15%;
+  }
 
   /* .speech-bubble:hover {
     scale: 1.1;
@@ -963,53 +970,6 @@ h6 {
   figcaption.clubs {
     font-size: 1.875rem;
   }
-  /* newsletter
---------------------*/
-  .newsletter-wrapper {
-    margin: 0 auto 0 auto;
-  }
-
-  section.newsletter {
-    width: 100%;
-  }
-
-  .blur {
-    height: 250px;
-    top: 400px;
-  }
-
-  .newsletter label {
-    font-size: 1.25rem;
-    margin-top: 64px;
-  }
-
-  form.newsletter {
-    height: 50px;
-  }
-
-  #newsletter {
-    font-size: 1.25rem;
-    height: 50px;
-    padding-left: 20px;
-    flex: 3;
-  }
-
-  #sign-up {
-    font-family: var(--sofia);
-    font-size: 1.375rem;
-    height: 50px;
-    transition-property: background-color;
-    transition-duration: 0.5s;
-  }
-
-  #sign-up:hover {
-    background-color: #210759d9;
-  }
-
-  #newsletter-error {
-    position: absolute;
-    bottom: -30px;
-  }
 
   /* Footer
 --------------------*/
@@ -1044,6 +1004,10 @@ h6 {
 --------------------*/
   .hero-container {
     background-image: url(../images/robot-main_extralarge.jpg);
+  }
+
+  .speech-bubble {
+     right: 25%;
   }
   
   #planet {
