--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -179,10 +179,6 @@ form {
   padding-bottom: 32px;
 }
 
-.icons i {
-  cursor: pointer;
-}
-
 /* ticket-dropdown */
 .ticket-dropdown {
   position: absolute;
@@ -367,24 +363,26 @@ button.profile:hover {
   width: 250px;
 }
 
-nav.icons {
+.nav-icons-wrapper {
   display: flex;
   justify-content: space-around;
   margin: 1rem 0;
 }
 
-.icon {
+.nav-icon {
+  font-size: 2rem;
+  cursor: pointer;
   color: var(--dark-blue);
   transition-property: scale;
   transition-duration: 0.5s;
   scale: 1;
 }
 
-.icon:hover {
+.nav-icon:hover {
   scale: 1.2;
 }
 
-.icons li {
+.nav-icons-wrapper li {
   list-style: none;
 }
 
@@ -394,7 +392,7 @@ nav.menu {
   z-index: 100;
   padding: 0;
   margin: 0;
-  background-color: var(--magenta);
+  background-color: var(--navbar-color);
   color: var(--white);
   font-family: var(--proxima-soft);
   font-size: 1.5rem;
@@ -798,7 +796,7 @@ h6 {
     justify-content: space-between;
   }
 
-  nav.icons {
+  .nav-icons-wrapper {
     justify-content: flex-end;
   }
 
@@ -886,6 +884,11 @@ h6 {
    .button {
     font-size: 1.25rem;
    } 
+
+    .nav-icon {
+      font-size: 2.5rem;
+      
+    }
 
   /* Header
 --------------------*/
