--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,6 +3,7 @@
   --button-color: #a20067;
   --navbar-color: #0091AB;
   --dark-purple: #210759;
+  --heading-bg: #252525;
   --purple: #470c68;
   --light-purple: #7c68a6;
   --dark-blue: #003057;
